<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SRGFloytTask</string>
    <string name="todo">TODO</string>
    <string name="tab_title_home">Home</string>
    <string name="tab_title_basket">Basket</string>
    <string name="retry">Retry</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_price">Checkout (%.2f%s)</string>
    <string name="price_currency">%.2f%s</string>
    <string name="home_fragment_title">Hi, shop your favourites!</string>
    <string name="basket_fragment_title">Shopping basket</string>
    <string name="empty_basket">You haven\'t added any products yet</string>
    <string name="delete_product">Delete product</string>
    <string name="remove_dialog_title">Are you sure you want to remove %s from your basket?</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_address">Address</string>
    <string name="placeholder_city">City</string>
    <string name="placeholder_postal_code">Postal Code</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_phone_number">Phone number</string>
    <string name="card_details">Card details</string>
    <string name="summary">Summary</string>
    <string name="thanks_purchase">Thanks for your purchase!</string>
    <string name="finish">Finish</string>
    <string name="settings_coming_soon">Coming soon!</string>
    <string name="total_price">Total: %.2f%s</string>
    <string name="complete_purchase">Complete purchase</string>
    <string name="confirm_before_exit_title">Confirm before exit</string>
    <string name="ok">OK</string>
</resources>